# app-persistent

./: .eproject  dist.ini  echo-server.pl  kill.pl  pclient.pl  pserver.pl
client/: app-persistent-client.cabal  pclient.hs
client/App/Persistent/: Client.hs
client/App/Persistent/Client/: EventLoop.hs  Message.hs
client/tests/: CmdLineParser.hs
lib/App/Persistent/: Server.pm  StartupInfo.pm
lib/App/Persistent/Server/: Connection.pm
t/: 00-load.t
util/: bench-io.pl  less-test.pl  repl.pl
