Name:          App-Persistent-Client
Version:       0.1
Description:   Talk to an App::Persistent server
License:       BSD4
License-file:  LICENSE
Author:        Jonathan Rockway
Maintainer:    jon@jrock.us
Build-Type:    Simple
Cabal-Version: >= 1.2
Executable pclient
  Main-is: pclient.hs
  Other-Modules: App.Persistent.Client.Message
                 App.Persistent.Client.EventLoop
                 App.Persistent.Client
  Build-Depends: base, network, json, haskell98, base >= 4
  ghc-options:   -O
